[metadata]
name = pytonlib-telemint
version = 0.0.1
author = Natanel Shitrit
author_email = natanelsht@gmail.com
description = PyTONLib utility for Telemint NFTs
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.7
url = https://github.com/Natanel-Shitrit/pytonlib-telemint
project_urls =
    Bug Tracker = https://github.com/Natanel-Shitrit/pytonlib-telemint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires = 
    pytonlib
package_dir =
    = src
packages = find:

[options.packages.find]
where = src